fix(style): set main line to grow exclusive to other lines
this fixes an issue with overflowing main lines that are spaced around/evenly

--- a/app/frontend/src/Presenter/Line.css
+++ b/app/frontend/src/Presenter/Line.css
@@ -1,11 +1,14 @@
 .line {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding: 5vh 5vw;
     text-align: center;
+}
+
+.line:not(.next-line) {
+	flex-grow: 1;
 }
 
 .line p {
